--- a/src/main/resources/templates/funciones/modificar.html
+++ b/src/main/resources/templates/funciones/modificar.html
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <h2>Agregar contacto</h2>
+                    <h2>Modificar contacto</h2>
 
                     <form class="form-horizontal item" th:object="${contacto}" th:action="@{/agregar/save}" method="post">
                         <div class="form-group">
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </div>
-    </div>
+
 
 </body>
 </html>
