--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,12 +23,7 @@
                     <a class="navbar-brand" href="/">Agenda Web</a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <style>
-                        .barra {
-                            color: white;
-                        }
-                    </style>
-                    <ul class="barra nav navbar-nav">
+                    <ul class="nav navbar-nav">
                         <li><a th:href="@{/agregar}" role="button">Agregar contacto</a></li>
                         <li><a th:href="@{/mostrar}" role="button">Mostrar contactos</a></li>
                         <li><a th:href="@{/mostrar}" role="button">Modificar contacto</a></li>
