--- a/src/main/resources/templates/funciones/mostrar.html
+++ b/src/main/resources/templates/funciones/mostrar.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container">
-        <nav class="navbar navbar-default navbar-inverse">
+        <nav class="navbar navbar-default ">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="/">Agenda Web</a>
