--- a/src/main/resources/templates/funciones/mostrar.html
+++ b/src/main/resources/templates/funciones/mostrar.html
@@ -22,9 +22,9 @@
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="/">Home</a></li>
                         <li><a th:href="@{/agregar}" role="button">Agregar contacto</a></li>
                         <li><a th:href="@{/mostrar}" role="button">Mostrar contacto</a></li>
+                        <li><a th:href="@{/mostrar}" role="button">Modificar contacto</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a th:href="@{/mostrar}" role="button">Eliminar contacto</a></li>
