modificar primary key to ID

--- a/src/main/resources/static/css/agenda.css
+++ b/src/main/resources/static/css/agenda.css
@@ -1,3 +1,11 @@
 body {
     background-image: url(../img/back.jpg);
 }
+
+.center {
+    text-align: center;
+}
+
+.body {
+    margin-top: 10%;
+}
