--- a/src/main/resources/templates/funciones/agregar.html
+++ b/src/main/resources/templates/funciones/agregar.html
@@ -25,26 +25,25 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li><a th:href="@{/agregar}" role="button">Agregar contacto</a></li>
-                        <li><a th:href="@{/mostrar}" role="button">Mostrar contacto</a></li>
-                        <li><a th:href="@{/mostrar}" role="button">Modificar contacto</a></li>
+                        <li><a th:href="@{/mostrar}" role="button">Mostrar contactos</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a th:href="@{#}" role="button">Eliminar contacto</a></li>
+                        <li><a th:href="@{/mostrar}" role="button">Eliminar contacto</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
 
-    <div class="container">
+    <div class="container body">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3"></div>
 
-                <div class="col-sm-6">
+                <div class="col-sm-6 center">
                     <h2>Agregar contacto</h2>
 
-                    <form class="form-horizontal item" th:object="${contacto}" th:action="@{/agregar/save}" method="post">
+                    <form class="form-horizontal item " th:object="${contacto}" th:action="@{/agregar/save}" method="post">
                         <div th:class="form-group" th:classappend="${#fields.hasErrors('nombre')}? 'has-error'">
                             <label class="col-sm-2 control-label">Nombre </label>
                             <div class="col-md-10">
@@ -70,7 +69,7 @@
                         <div th:if="${message}" class="alert alert-success" role="alert">
                             <p th:text="${message}">success message</p>
                         </div>
-                        <button type="submit" class=" btn btn-default">Guardar</button>
+                        <button type="submit" class="btn btn-default">Guardar</button>
 
                     </form>
                 </div>
