--- a/src/main/resources/templates/funciones/mostrar.html
+++ b/src/main/resources/templates/funciones/mostrar.html
@@ -23,8 +23,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li><a th:href="@{/agregar}" role="button">Agregar contacto</a></li>
-                        <li><a th:href="@{/mostrar}" role="button">Mostrar contacto</a></li>
-                        <li><a th:href="@{/mostrar}" role="button">Modificar contacto</a></li>
+                        <li><a th:href="@{/mostrar}" role="button">Mostrar contactos</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a th:href="@{/mostrar}" role="button">Eliminar contacto</a></li>
@@ -36,12 +35,12 @@
 
 
 
-    <div class="container">
+    <div class="container body">
         <div class="row">
             <div class="col-sm-3"></div>
 
             <div class="col-sm-6">
-                <h2>Contactos</h2>
+                <h2 class="center">Contactos</h2>
 
                 <table class="table table-striped">
                     <thead>
@@ -50,7 +49,7 @@
                         <th>Apellido</th>
                         <th>Teléfono</th>
                         <th>Editar</th>
-                        <th>Borrar</th>
+                        <th>Eliminar</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -59,7 +58,7 @@
                         <td th:text="${contacto.apellido}"></td>
                         <td th:text="${contacto.telefono}"></td>
                         <td><a th:href="@{/editar/} + ${contacto.telefono}">Editar</a></td>
-                        <td><a th:href="@{/eliminar/} + ${contacto.telefono}"> Borrar</a></td>
+                        <td><a th:href="@{/eliminar/} + ${contacto.telefono}"> Eliminar</a></td>
                     </tr>
                     </tbody>
                 </table>
