refactorizada primary key

--- a/src/main/resources/templates/funciones/agregar.html
+++ b/src/main/resources/templates/funciones/agregar.html
@@ -44,6 +44,7 @@
                     <h2>Agregar contacto</h2>
 
                     <form class="form-horizontal item " th:object="${contacto}" th:action="@{/agregar/save}" method="post">
+                        <input type="hidden" th:field="*{id}" />
                         <div th:class="form-group" th:classappend="${#fields.hasErrors('nombre')}? 'has-error'">
                             <label class="col-sm-2 control-label">Nombre </label>
                             <div class="col-md-10">
