--- a/src/main/resources/templates/funciones/mostrar.html
+++ b/src/main/resources/templates/funciones/mostrar.html
@@ -57,8 +57,8 @@
                         <td th:text="${contacto.nombre}"></td>
                         <td th:text="${contacto.apellido}"></td>
                         <td th:text="${contacto.telefono}"></td>
-                        <td><a th:href="@{/editar/} + ${contacto.telefono}">Editar</a></td>
-                        <td><a th:href="@{/eliminar/} + ${contacto.telefono}"> Eliminar</a></td>
+                        <td><a th:href="@{/editar/} + ${contacto.id}">Editar</a></td>
+                        <td><a th:href="@{/eliminar/} + ${contacto.id}"> Eliminar</a></td>
                     </tr>
                     </tbody>
                 </table>
